--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.4",
+        "jacquestvanzuydam/laravel-firebird": "dev-5.4-support",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/passport": "^4.0@dev",
+        "laravel/tinker": "~1.0",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
