--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-cors": "^0.9.2",
+        "barryvdh/laravel-debugbar": "^2.4",
         "jacquestvanzuydam/laravel-firebird": "dev-5.4-support",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^4.0@dev",
